--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation 'org.apache.commons:commons-math3:3.6.1'
 
     implementation 'com.acmerobotics.roadrunner:core:0.5.5'
+
+    implementation 'org.openftc:easyopencv:1.5.2'
 }
 repositories {
     google() // Needed for androidx
