--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -39,7 +39,7 @@ dependencies {
 
     implementation 'com.acmerobotics.roadrunner:core:0.5.5'
 
-    implementation 'org.openftc:easyopencv:1.5.2'
+//    implementation 'org.openftc:easyopencv:1.5.2'
 }
 repositories {
     google() // Needed for androidx
